ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sales-management-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/user-service
            pathType: Prefix
            backend:
              service:
                name: user-management-service
                port:
                  number: 80
          - path: /api/v1/item-management-service
            pathType: Prefix
            backend:
              service:
               name: item-management-service
               port:
                  number: 80
